infra/k8s/envoy-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  name: ext-authz-idp-config
  namespace: default
spec:
  backendServices:
    - name: django-service
      namespace: default
      number:
        - "80"
    - name: oauth2-proxy
      namespace: default
      number:
        - "4180"
  services:
    - name: django-service
      namespace: default
      ports:
        - 80
  resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: django-service_80
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ext_authz_http
              route_config:
                name: django-route-config
                virtual_hosts:
                  - name: django-vhost
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: "k8s/default/django-service:80"
              http_filters:
                - name: envoy.filters.http.ext_authz
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                    transport_api_version: V3
                    failure_mode_allow: false
                    http_service:
                      server_uri:
                        uri: http://oauth2-proxy-cluster
                        cluster: oauth2-proxy-cluster
                        timeout: 5s
                      authorization_request:
                        allowed_headers:
                          patterns:
                            - exact: cookie
                            - exact: authorization
                      authorization_response:
                        allowed_upstream_headers:
                          patterns:
                            - exact: authorization
                            - exact: x-auth-request-user
                            - exact: x-auth-request-email
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: oauth2-proxy-cluster
    connect_timeout: 5s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: oauth2-proxy-cluster
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: oauth2-proxy.default.svc.cluster.local
                    port_value: 4180
